name:                typelevelLR
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ymzk/typelevelLR#readme
license:             MIT
license-file:        LICENSE
author:              Tetsuro Yamazaki
maintainer:          yamazaki@csg.ci.i.u-tokyo.ac.jp
copyright:           2017 Tetsuro Yamazaki
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Utility
                     , Syntax
                     , SyntaxParser
                     , LALRAutomaton
                     , CodeGenerateEnv
                     , GenerateHaskell
--                      , GenerateCpp
--                      , Generate
  build-depends:       base        >= 4.7 && < 5
                     , containers  >= 0.5
                     , parsec      >= 3.1 && < 4
                     , mtl         >= 2.2 && < 3
                     , filepath    >= 1.4 && < 2
  default-language:    Haskell2010

executable typelevelLR
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , typelevelLR
                     , optparse-declarative  >= 0.3
                     , filepath              >= 1.4 && < 2
  default-language:    Haskell2010

test-suite typelevelLR-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SampleSyntaxes
                     , UtilitySpec
                     , IntegratedTest
  build-depends:       base
                     , typelevelLR
                     , hspec      >= 2.4
                     , QuickCheck >= 2.9
                     , directory  >= 1.3
                     , process    >= 1.4
                     , filepath   >= 1.4
                     , mtl        >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ymzk/typelevelLR
